--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,6 @@
     <title>MyList</title>
 </head>
 <body>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae asperiores, eaque, voluptas omnis necessitatibus tenetur totam id maiores enim aliquam adipisci ipsam perspiciatis repellendus facere nemo eum, ducimus fugiat libero.   
+   <script src="App.js"></script>
 </body>
 </html>
