--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 class="title">Hello!</h1>
-    <button class="changeColor">Click me I be virus</button>
+    <button class="addListBtn">Click me I be virus</button>
     <ul class="name-List">
       <li>Marco</li>
       <li>James</li>
@@ -17,6 +17,7 @@
       <li>Mark</li>
       <li>Paul</li>
     </ul>
+    <input class="list-input" type="text" />
     <script src="App.js"></script>
   </body>
 </html>
